# iamcore-sdk-py

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  GEMINI.md  README.md  TEST_PLAN.md  codebook.toml  pyproject.toml  requirements.txt
iamcore/: __init__.py
iamcore/client/: __init__.py  application.py  application_api_key.py  application_resorce_type.py  auth.py  common.py  evaluete.py  exceptions.py  group.py  policy.py  resource.py  tenant.py  user.py
iamcore/client/api_key/: __init__.py  client.py  dto.py
iamcore/client/application/: __init__.py  client.py  dto.py
iamcore/client/application_api_key/: __init__.py  client.py  dto.py
iamcore/client/application_resource_type/: __init__.py  client.py  dto.py
iamcore/client/auth/: __init__.py  client.py  dto.py
iamcore/client/base/: client.py  exception_handler.py  models.py
iamcore/client/config/: __init__.py
iamcore/client/evaluate/: client.py
iamcore/client/exceptions/: __init__.py
iamcore/client/group/: __init__.py  client.py  dto.py
iamcore/client/models/: base.py  client.py
iamcore/client/policy/: __init__.py  client.py  dto.py
iamcore/client/resource/: __init__.py  client.py  dto.py
iamcore/client/tenant/: __init__.py  client.py  dto.py
iamcore/client/user/: __init__.py  client.py  dto.py
tests/: conftest.py
tests/conf/: __init__.py
tests/fixtures/: mock_responses.py  mock_server.py  sample_data.py
tests/iamcore/client/: test_auth.py  test_policies.py  test_tenants.py  test_users.py
tests/unit/: test_http_client.py
tests/unit/clients/: test_api_key_client.py  test_application_client.py  test_application_resource_type_client.py  test_group_client.py  test_http_client.py  test_policy_client.py  test_resource_client.py  test_tenant_client.py  test_user_client.py
tests/unit/models/: test_api_key_models.py  test_application_models.py  test_application_resource_type_models.py  test_base_models.py  test_config.py  test_group_models.py  test_policy_models.py  test_resource_models.py  test_tenant_models.py  test_user_models.py
