[project]
name = "iamcore-sdk-py"
version = "0.0.13"
requires-python = "==3.9.*"
authors = [
  { name = "Oleksandr Burdeinyi", email = "aburdeinyi@kaaiot.io" },
  { name = "Nikolay Borisenko", email = "nborisenko@kaaiot.io" },
  { name = "Evhen Malysh", email = "emalysh@kaaiot.io" },
]
dependencies = [
  "iamcore-irn-py>=0.0.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "typing-extensions>=4.6.3",
]

[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = [
  "build>=0.10.0",
  "codecov>=2.1.13",
  "mypy>=1.8.0",
  "pyright>=1.1.0",
  "pytest>=7.3.1",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "setuptools>=67.8.0",
  "twine>=4.0.0",
  "pytest-mock>=3.10.0",
  "responses>=0.23.0",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["iamcore"]
exclude = ["**/__pycache__", "**/migrations"]
reportMissingImports = true
reportMissingTypeStubs = false
strictParameterNoneValue = true
reportIncompatibleVariableOverride = false
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
useLibraryCodeForTypes = true
pythonVersion = "3.9"
reportUnreachable = true
reportUnusedParameter = 'hint'
reportUnusedCallResult = false
reportDeprecated = true

[tool.mypy]
python_version = "3.9"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]

[tool.ruff]
# Python version
target-version = "py39"

# Line length
line-length = 120

# Exclude directories
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "build",
  "dist",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit (security)
  "BLE",   # flake8-blind-except
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "INP",   # flake8-no-pep420
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TC",    # flake8-type-checking
  "INT",   # flake8-gettext
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "TD",    # flake8-todos
  "FIX",   # flake8-fixme
  "ERA",   # eradicate
  "PD",    # pandas-vet
  "PGH",   # pygrep-hooks
  "PL",    # pylint
  "TRY",   # tryceratops
  "FLY",   # flynt
  "NPY",   # numpy-specific rules
  "PERF",  # perflint
  "FURB",  # refurb
  "DJ",    # flake8-django
  "RUF",   # ruff-specific rules
]


# Disable some overly strict rules
ignore = [
  "ANN401",  # Dynamically typed expressions (Any) are disallowed
  "D203",    # 1 blank line required before class docstring (conflicts with D211)
  "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
  "COM812",  # Trailing comma missing (conflicts with formatter)
  "ISC001",  # Implicit string concatenation (conflicts with formatter)
  "E501",    # Line too long (handled by formatter)
  "S101",    # Use of assert detected (needed for tests)
  "PLR0913", # Too many arguments
  "TD002",   # Missing TODO author
  "TD003",   # Missing TODO link
  "FIX002",  # Line contains TODO
  "UP045",
  "RUF012",
  "DJ008",
  "DJ001",
  "UP007",
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = [
  "S101",    # asserts allowed in tests
  "ARG",     # unused function args (fixtures)
  "FBT",     # boolean traps okay in tests
  "PLR2004", # magic values in tests are okay
  "S311",    # pseudo-random generators okay in tests
]

# Scripts can have print statements
"scripts/**/*.py" = ["T20"]

# __init__.py can have unused imports
"__init__.py" = ["F401"]
